--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ repositories {
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://jitpack.io" }
 	maven { url "https://maven.terraformersmc.com/releases/" }
+
+	mavenCentral()
 }
 
 dependencies {
@@ -34,12 +36,15 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modApi("me.shedaniel.cloth:cloth-config-fabric:6.1.48") {
+	modApi("me.shedaniel.cloth:cloth-config-fabric:6.2.57") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
 	// Mod Menu, to add the hook for a config screen
 	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+
+	implementation 'com.moandjiezana.toml:toml4j:0.7.2'
+	include 'com.moandjiezana.toml:toml4j:0.7.2'
 }
 
 processResources {
