--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version = 1.18.1
-	yarn_mappings = 1.18.1+build.22
+	minecraft_version = 1.18.2
+	yarn_mappings = 1.18.2+build.1
 	loader_version = 0.13.3
 
 # Mod Properties
@@ -14,4 +14,6 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	fabric_version = 0.46.4+1.18
+	toml4j_version = 0.7.2
 	modmenu_version = 3.0.1
+	cloth_config_version = 6.2.57
